objects/Account_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address_Change_request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Address Change request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activities_Subject_to_Military_End_Use__c</fullName>
        <label>Activities Subject to Military End Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Number__c</fullName>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Address_Sent_To_OM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Sent To OM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airport_IATA_code__c</fullName>
        <label>Airport IATA code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Number__c</fullName>
        <label>Bill To Address Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Attention__c</fullName>
        <label>Bill To Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account_Number__c</fullName>
        <label>Carrier Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name_Others__c</fullName>
        <label>Carrier Name Others</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name_and_Service_Level__c</fullName>
        <label>Carrier Name and Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Circle Freight (CEVA)</fullName>
                </value>
                <value>
                    <fullName>Federal Express</fullName>
                </value>
                <value>
                    <fullName>Nippon Express</fullName>
                </value>
                <value>
                    <fullName>Panalpina</fullName>
                </value>
                <value>
                    <fullName>Sky Courier (DHL)</fullName>
                </value>
                <value>
                    <fullName>United Parcel</fullName>
                </value>
                <value>
                    <fullName>Service (UPS)</fullName>
                </value>
                <value>
                    <fullName>Walker International</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Schenkers</fullName>
                </value>
                <value>
                    <fullName>UPS SCS</fullName>
                </value>
                <value>
                    <fullName>Expedite Plus</fullName>
                </value>
                <value>
                    <fullName>UTI MIAMI(JABIL BRAZIL)</fullName>
                </value>
                <value>
                    <fullName>UTI Boston(Flex Hong Kong, Jabil China)</fullName>
                </value>
                <value>
                    <fullName>Expeditors(Google, Q Logic, Jabil Penang, RFMD)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Type__c</fullName>
        <label>Certificate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blanket tax certificate</fullName>
                </value>
                <value>
                    <fullName>Unit tax certificate</fullName>
                </value>
                <value>
                    <fullName>Blanket tax certificate already on file with GLOBALFOUNDRIES tax department</fullName>
                </value>
                <value>
                    <fullName>Export Claim and WRIT (If Customer is Exporter of Record)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemical_Biological_Sysytem__c</fullName>
        <label>Chemical Biological Sysytem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder__c</fullName>
        <label>Freight Forwarder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Broker__c</fullName>
        <label>Import Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Contrary_to_US_Export_Laws__c</fullName>
        <label>Is Contrary to US Export Laws</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Military_End_User__c</fullName>
        <label>Is Military End User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Related_to_Russia_or_Ukraine__c</fullName>
        <label>Is Related to Russia or Ukraine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missiles_Related_Activity__c</fullName>
        <label>Missiles Related Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Address_Line_1__c</fullName>
        <label>New Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address_Line_2__c</fullName>
        <label>New Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address_Line_3__c</fullName>
        <label>New Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Bill_To_Attention__c</fullName>
        <label>New Bill To Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Country__c</fullName>
        <label>New Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Location__c</fullName>
        <label>New Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Postal_Zip_Code__c</fullName>
        <label>New Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New address approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nuclear_Fuel_Related_Activity__c</fullName>
        <label>Nuclear Fuel Related Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Combination_Allowed__c</fullName>
        <label>Order Combination Allowed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partial_Deliveries_Accepted__c</fullName>
        <label>Partial Deliveries Accepted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Zip_Code__c</fullName>
        <label>Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proliferation_Info_Provided_By_Email__c</fullName>
        <label>Proliferation Info Provided By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proliferation_Info_Provided_By_Name__c</fullName>
        <label>Proliferation Info Provided By Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGT_Taxable__c</fullName>
        <label>Taxable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Name__c</fullName>
        <label>Ship to Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Phone_Fax__c</fullName>
        <label>Ship to Contact Phone/Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_to_VAT_Registration_Number__c</fullName>
        <label>Ship to VAT Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipments_exported_from_USA__c</fullName>
        <label>Will Shipments be exported from USA ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Singapore_GST_Tax_Exemption__c</fullName>
        <label>Singapore GST Tax Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic Shipments within Singapore</fullName>
                </value>
                <value>
                    <fullName>Registered for ACMT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_to_VAT_Registration_Number__c</fullName>
        <label>Sold to VAT Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Instructions__c</fullName>
        <label>Special Shipping Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ship To Address</fullName>
                </value>
                <value>
                    <fullName>Bill To Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Tax_Exempt__c</fullName>
        <label>Tax Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Taxable__c</fullName>
        <label>Taxable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_will_be_Exporter_of_Record__c</fullName>
        <label>Who will be Exporter of Record ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBALFOUNDRIES</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Address</label>
    <nameField>
        <label>Account Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_approved_check_for_new_address</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(Account_Address_Change_request__c,
 NOT(ISBLANK(New_Address_Line_1__c)),
 NOT(ISBLANK(New_Address_Line_2__c)),
 NOT(ISBLANK(New_Address_Line_3__c)),
 NOT(ISBLANK(New_Address_Line_4__c)),
 NOT(ISBLANK(New_Bill_To_Attention__c)),
 NOT(ISBLANK(New_City__c)),
 NOT(ISBLANK(New_Location__c)),
 NOT(ISBLANK(New_Postal_Zip_Code__c)),
 NOT(ISPICKVAL(New_State__c, &quot;&quot;)),
 NOT(ISPICKVAL(New_Country__c, &quot;&quot;))) ,
 NOT(ISPICKVAL(Status__c, &quot;Approved&quot;)))</errorConditionFormula>
        <errorMessage>Users are allowed to enter New Address only if old address is approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_to_Location_40</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Location__c) &gt;40</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Location can not be grater than 40 chars as it is interface to oracle ERP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_to_NewLocation_40</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(New_Location__c) &gt;40</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Location can not be grater than 40 chars as it is interface to oracle ERP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Address_creation_check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(NOT(ISPICKVAL(New_Status__c , &quot;Approved&quot;)) , AND(  NOT( Account_Address_Change_request__c) ,
 ISPICKVAL( Status__c , &quot;Approved&quot;), 
OR(ISCHANGED( New_Address_Line_1__c), 
 ISCHANGED( New_Address_Line_2__c), 
 ISCHANGED( New_Address_Line_3__c),
 ISCHANGED( New_Address_Line_4__c),
 ISCHANGED( New_Bill_To_Attention__c),
 ISCHANGED( New_City__c),
 ISCHANGED( New_Country__c),
 ISCHANGED( New_Location__c),
 ISCHANGED( New_Postal_Zip_Code__c),
 ISCHANGED( New_State__c)) ),False )</errorConditionFormula>
        <errorMessage>Please check Account Address change request to request new address change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unable_to_Update_Approved_Bill_To_Addres</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(ISCHANGED(Address_1__c), 
ISCHANGED(Address_2__c), 
ISCHANGED(Address_3__c), 
ISCHANGED(Address_4__c), 
ISCHANGED(City__c), 
ISCHANGED(Country__c), 
ISCHANGED(State__c), 
ISCHANGED(Name), 
ISCHANGED(Bill_To_Attention__c), 
ISCHANGED(Location__c), 
ISCHANGED(Postal_Zip_Code__c)), 
ISPICKVAL(Type__c,&apos;Bill To Address&apos;), 
ISPICKVAL(Status__c,&apos;Approved&apos;),
NOT(ISPICKVAL( New_Status__c , &apos;Approved&apos;)) 
)</errorConditionFormula>
        <errorMessage>Once the address is approved you can&apos;t update its values. Please create new address in new Address fields and submit for approval.</errorMessage>
    </validationRules>
</CustomObject>